--- a/ETL/ETL-Ebola.ipynb
+++ b/ETL/ETL-Ebola.ipynb
@@ -2,12 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sqlalchemy import create_engine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ebola"
    ]
   },
   {
@@ -339,6 +346,292 @@
    ],
    "source": [
     "pd.read_sql_query('select * from ebola_epidemic', con=engine).head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Corona"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epidemic_corona='/Users/maheshdivakarannair/Documents/GitHub/project-outbreak/data_sets/epidemic/covid_19.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epidemic_corona_df = pd.read_csv(epidemic_corona)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Province/State</th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Recovered</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Anhui</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>31.8257</td>\n",
+       "      <td>117.2264</td>\n",
+       "      <td>1/22/20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Beijing</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>40.1824</td>\n",
+       "      <td>116.4142</td>\n",
+       "      <td>1/22/20</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Chongqing</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>30.0572</td>\n",
+       "      <td>107.8740</td>\n",
+       "      <td>1/22/20</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Fujian</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>26.0789</td>\n",
+       "      <td>117.9874</td>\n",
+       "      <td>1/22/20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Gansu</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>36.0611</td>\n",
+       "      <td>103.8343</td>\n",
+       "      <td>1/22/20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Province/State  Country/Region      Lat      Long     Date  Confirmed  \\\n",
+       "0          Anhui  Mainland China  31.8257  117.2264  1/22/20          1   \n",
+       "1        Beijing  Mainland China  40.1824  116.4142  1/22/20         14   \n",
+       "2      Chongqing  Mainland China  30.0572  107.8740  1/22/20          6   \n",
+       "3         Fujian  Mainland China  26.0789  117.9874  1/22/20          1   \n",
+       "4          Gansu  Mainland China  36.0611  103.8343  1/22/20          0   \n",
+       "\n",
+       "   Deaths  Recovered  \n",
+       "0       0          0  \n",
+       "1       0          0  \n",
+       "2       0          0  \n",
+       "3       0          0  \n",
+       "4       0          0  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "epidemic_corona_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rds_connection_string = \"mahesh1:mahesh@localhost:5432/marketing_db\"\n",
+    "engine = create_engine(f'postgresql://{rds_connection_string}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epidemic_corona_df.to_sql(name='corona_epidemic', con=engine, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Province/State</th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Recovered</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Anhui</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>31.8257</td>\n",
+       "      <td>117.2264</td>\n",
+       "      <td>1/22/20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Beijing</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>40.1824</td>\n",
+       "      <td>116.4142</td>\n",
+       "      <td>1/22/20</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Chongqing</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>30.0572</td>\n",
+       "      <td>107.8740</td>\n",
+       "      <td>1/22/20</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Fujian</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>26.0789</td>\n",
+       "      <td>117.9874</td>\n",
+       "      <td>1/22/20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Gansu</td>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>36.0611</td>\n",
+       "      <td>103.8343</td>\n",
+       "      <td>1/22/20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Province/State  Country/Region      Lat      Long     Date  Confirmed  \\\n",
+       "0          Anhui  Mainland China  31.8257  117.2264  1/22/20          1   \n",
+       "1        Beijing  Mainland China  40.1824  116.4142  1/22/20         14   \n",
+       "2      Chongqing  Mainland China  30.0572  107.8740  1/22/20          6   \n",
+       "3         Fujian  Mainland China  26.0789  117.9874  1/22/20          1   \n",
+       "4          Gansu  Mainland China  36.0611  103.8343  1/22/20          0   \n",
+       "\n",
+       "   Deaths  Recovered  \n",
+       "0       0          0  \n",
+       "1       0          0  \n",
+       "2       0          0  \n",
+       "3       0          0  \n",
+       "4       0          0  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql_query('select * from corona_epidemic', con=engine).head()"
    ]
   },
   {
