--- a/ETL/ETL-Zika.ipynb
+++ b/ETL/ETL-Zika.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>11/28/15</td>\n",
        "      <td>El_Salvador-Ahuachapan</td>\n",
        "      <td>department</td>\n",
@@ -80,7 +80,7 @@
        "      <td>cases</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>11/28/15</td>\n",
        "      <td>El_Salvador-Cabanas</td>\n",
        "      <td>department</td>\n",
@@ -92,7 +92,7 @@
        "      <td>cases</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>11/28/15</td>\n",
        "      <td>El_Salvador-Chalatenango</td>\n",
        "      <td>department</td>\n",
@@ -104,7 +104,7 @@
        "      <td>cases</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>11/28/15</td>\n",
        "      <td>El_Salvador-Cuscatlan</td>\n",
        "      <td>department</td>\n",
@@ -116,7 +116,7 @@
        "      <td>cases</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>11/28/15</td>\n",
        "      <td>El_Salvador-La_Libertad</td>\n",
        "      <td>department</td>\n",
@@ -154,7 +154,7 @@
        "4    61  cases  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "413"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "11"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "380"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "107619"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>11/28/15</td>\n",
        "      <td>El_Salvador-Ahuachapan</td>\n",
        "      <td>department</td>\n",
@@ -353,7 +353,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>11/28/15</td>\n",
        "      <td>El_Salvador-Cabanas</td>\n",
        "      <td>department</td>\n",
@@ -362,7 +362,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>11/28/15</td>\n",
        "      <td>El_Salvador-Chalatenango</td>\n",
        "      <td>department</td>\n",
@@ -371,7 +371,7 @@
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>11/28/15</td>\n",
        "      <td>El_Salvador-Cuscatlan</td>\n",
        "      <td>department</td>\n",
@@ -380,7 +380,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>11/28/15</td>\n",
        "      <td>El_Salvador-La_Libertad</td>\n",
        "      <td>department</td>\n",
@@ -408,7 +408,7 @@
        "4  cumulative_suspected_total          SV0010    61  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,18 +445,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# rds_connection_string = \"mahesh1:mahesh@localhost:5432/epidemic_db\"\n",
-    "rds_connection_string = \"mahesh1:mahesh@localhost:5432/epidemic_db\"\n",
+    "rds_connection_string = \"postgres:940818@localhost:5432/epidemic_db\"\n",
     "engine = create_engine(f'postgresql://{rds_connection_string}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>11/28/15</td>\n",
        "      <td>El_Salvador-Ahuachapan</td>\n",
        "      <td>department</td>\n",
@@ -508,7 +508,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>11/28/15</td>\n",
        "      <td>El_Salvador-Cabanas</td>\n",
        "      <td>department</td>\n",
@@ -517,7 +517,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>11/28/15</td>\n",
        "      <td>El_Salvador-Chalatenango</td>\n",
        "      <td>department</td>\n",
@@ -526,7 +526,7 @@
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>11/28/15</td>\n",
        "      <td>El_Salvador-Cuscatlan</td>\n",
        "      <td>department</td>\n",
@@ -535,7 +535,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>11/28/15</td>\n",
        "      <td>El_Salvador-La_Libertad</td>\n",
        "      <td>department</td>\n",
@@ -563,7 +563,7 @@
        "4  cumulative_suspected_total          SV0010    61  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
