renamed a couple of more countries in corona data

--- a/ETL/ETL-Ebola_v2.ipynb
+++ b/ETL/ETL-Ebola_v2.ipynb
@@ -550,10 +550,8 @@
    "source": [
     "# Selecting necessary columns and renaming them. Droping others\n",
     "epidemic_corona_df_2 = epidemic_corona_df[['Date','Country/Region', 'Confirmed', 'Deaths']]\n",
-    "to_drop = ['Others']\n",
-    "epidemic_corona_df_2 = epidemic_corona_df_2[~epidemic_corona_df_2['Country/Region'].isin(to_drop)]\n",
     "epidemic_corona_df_2 = epidemic_corona_df_2.rename(columns = {'Country/Region':'Country','Confirmed':'Confirmed_cases','Deaths':'Confirmed_Death'}) \n",
-    "len(epidemic_corona_df_2)\n"
+    "len(epidemic_corona_df_2)"
    ]
   },
   {
@@ -644,9 +642,11 @@
    ],
    "source": [
     "# Renaming countries \n",
-    "epidemic_corona_df_2[\"Country\"].replace({\"Mainland China\": \"China\", \"US\": \"United States of America\", \"UK\": \"United Kingdom\"}, inplace=True)\n",
-    "to_drop = ['Others']\n",
-    "epidemic_corona_df_2[~epidemic_corona_df_2['Country'].isin(to_drop)]\n",
+    "epidemic_corona_df_2[\"Country\"].replace({\"Mainland China\": \"China\", \"US\": \"United States of America\", \"UK\": \"United Kingdom\",\n",
+    "                                        \"French Guiana\":\"France\", \"Hong Kong\":\"Hong Kong S.A.R.\",\"Macau\":\"China\",\n",
+    "                                         \"Others\":\"Diamond Princess Cruise Ship\", \"Serbia\":\"Republic of Serbia\",\n",
+    "                                         \"Vatican City\": \"Italy\"}, inplace=True)\n",
+    "\n",
     "epidemic_corona_df_2.head()\n",
     "\n",
     "\n"
